fix: remove outside spacing from SettingsDialog

--- a/src/components/SettingsDialog/SettingsDialog.module.scss
+++ b/src/components/SettingsDialog/SettingsDialog.module.scss
@@ -3,7 +3,6 @@
   flex-direction: column;
   background: white;
   width: 540px;
-  margin-inline: 0.5rem;
   border-radius: 1.5rem;
   overflow: auto;
 }
